[package]
name = "hello"
version = "0.1.0"
authors = ["Lars Mühmel <lars@muehml.eu>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
reqwest = {version = "0.11.0", features = ["blocking", "json"]}
serde_json = "1.0.61"
